Input routines, moving rustup stuff to the @actions-rs/toolchain repo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "module": "commonjs",
         "declaration": true,
         "sourceMap": true,
+        "allowJs": false,
         "outDir": "./lib",
         "rootDir": "./src",
         "strict": true,
