--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "dependencies": {
         "@actions/core": "^1.1.1",
         "@actions/exec": "^1.0.1",
-        "@actions/io": "^1.0.1",
-        "@actions/tool-cache": "^1.1.1"
+        "@actions/io": "^1.0.1"
     },
     "devDependencies": {
         "@types/jest": "^24.0.13",
