--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "es6",
         "module": "commonjs",
+        "lib": ["es6"],
         "declaration": true,
         "sourceMap": true,
         "allowJs": false,
