--- a/package.json
+++ b/package.json
@@ -1,32 +1,20 @@
 {
+    "private": false,
     "name": "@actions-rs/core",
     "version": "0.0.4",
-    "private": false,
+    "author": "actions-rs",
+    "license": "MIT",
     "description": "Core functionality for the @actions-rs repos",
     "main": "lib/core.js",
-    "types": "lib/core.d.ts",
-    "directories": {
-        "lib": "lib",
-        "test": "__tests__"
-    },
-    "files": [
-        "lib"
-    ],
     "scripts": {
         "build": "tsc -p .",
-        "watch": "nodemon --watch 'src/**/*.ts' --exec npm run-script build",
-        "refresh": "rm -rf ./lib/* && npm run-script build",
-        "test": "jest --passWithNoTests"
+        "watch": "tsc -p . -w",
+        "refresh": "rm -rf ./lib/* && npm run build"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/actions-rs/core.git"
     },
-    "publishConfig": {
-        "registry": "https://npm.pkg.github.com/"
-    },
-    "author": "actions-rs",
-    "license": "MIT",
     "bugs": {
         "url": "https://github.com/actions-rs/core/issues"
     },
@@ -38,11 +26,7 @@
     "devDependencies": {
         "@types/jest": "^24.0.13",
         "@types/node": "^12.7.5",
-        "nodemon": "^1.19.2",
         "ts-node": "^8.4.1",
-        "jest": "^24.9.0",
-        "jest-circus": "^24.9.0",
-        "ts-jest": "^24.0.2",
         "typescript": "^3.5.1"
     }
 }
