--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "main": "lib/core.js",
     "scripts": {
         "build": "tsc -p .",
-        "watch": "tsc -p . -w",
-        "refresh": "rm -rf ./lib/* && npm run build"
+        "format": "prettier --write 'src/**/*.{js,ts,tsx}'",
+        "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts,tsx}'",
+        "refresh": "rm -rf ./lib/* && npm run build",
+        "watch": "tsc -p . -w"
     },
     "repository": {
         "type": "git",
@@ -26,6 +28,12 @@
     "devDependencies": {
         "@types/jest": "^24.0.13",
         "@types/node": "^12.7.5",
+        "@typescript-eslint/eslint-plugin": "^2.3.2",
+        "@typescript-eslint/parser": "^2.3.2",
+        "eslint": "^6.5.1",
+        "eslint-config-prettier": "^6.3.0",
+        "eslint-plugin-prettier": "^3.1.1",
+        "prettier": "^1.18.2",
         "ts-node": "^8.4.1",
         "typescript": "^3.5.1"
     }
