temporary including the build results

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-dist/*
+# TODO: TEMPORARY
+# dist/*
 __tests__/runner/*
 
 # Rest pulled from https://github.com/github/gitignore/blob/master/Node.gitignore
