--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
     "private": false,
     "name": "@actions-rs/core",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "author": "actions-rs",
     "license": "MIT",
     "description": "Core functionality for the @actions-rs repos",
-    "main": "lib/core.js",
+    "main": "dist/core.js",
+    "files": [
+        "dist/**/*.js"
+    ],
     "scripts": {
         "build": "tsc -p .",
         "format": "prettier --write 'src/**/*.{js,ts,tsx}'",
         "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts,tsx}'",
-        "refresh": "rm -rf ./lib/* && npm run build",
+        "refresh": "rm -rf ./dist/* && npm run build",
         "test": "jest --passWithNoTests",
         "watch": "tsc -p . -w"
     },
@@ -22,15 +25,19 @@
         "url": "https://github.com/actions-rs/core/issues"
     },
     "dependencies": {
-        "@actions/core": "^1.1.1",
+        "@actions/core": "^1.1.3",
         "@actions/exec": "^1.0.1",
-        "@actions/io": "^1.0.1"
+        "@actions/github": "^1.1.0",
+        "@actions/io": "^1.0.1",
+        "@actions/tool-cache": "^1.0.1",
+        "@octokit/graphql": "^2.0.1",
+        "@octokit/rest": "^16.30.2"
     },
     "devDependencies": {
         "@types/jest": "^24.0.13",
-        "@types/node": "^12.7.5",
-        "@typescript-eslint/eslint-plugin": "^2.3.2",
-        "@typescript-eslint/parser": "^2.3.2",
+        "@types/node": "^12.7.11",
+        "@typescript-eslint/eslint-plugin": "^2.3.3",
+        "@typescript-eslint/parser": "^2.3.3",
         "eslint": "^6.5.1",
         "eslint-config-prettier": "^6.3.0",
         "eslint-plugin-prettier": "^3.1.1",
