--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "@actions/io": "^1.0.1",
         "@actions/tool-cache": "^1.0.1",
         "@octokit/graphql": "^2.0.1",
-        "@octokit/rest": "^16.30.2"
+        "@octokit/rest": "^16.30.2",
+        "semver": "^6.3.0"
     },
     "devDependencies": {
         "@types/jest": "^24.0.13",
