--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "dependencies": {
         "@actions/core": "^1.1.3",
         "@actions/exec": "^1.0.1",
-        "@actions/github": "^1.1.0",
+        "@actions/github": "^2.0.0",
         "@actions/io": "^1.0.1",
         "@actions/tool-cache": "^1.0.1",
-        "@octokit/graphql": "^2.0.1",
+        "@octokit/graphql": "^4.3.1",
         "@octokit/rest": "^16.35.0",
         "semver": "^6.3.0"
     },
     "devDependencies": {
         "@types/jest": "^24.0.23",
         "@types/node": "^12.12.14",
+        "@types/semver": "^6.2.0",
         "@typescript-eslint/eslint-plugin": "^2.9.0",
         "@typescript-eslint/parser": "^2.9.0",
         "eslint": "^6.7.2",
