--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+name: CI
 on: [pull_request, push]
 jobs:
   # The main CI workflow; installs dependencies, runs eslint, prettier, and jest.
@@ -9,3 +10,26 @@ jobs:
     - run: npm run lint
     - run: npm run build
     - run: npm run test
+
+  installers:
+    name: Test installers
+    needs: [main]
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+
+    steps:
+      - uses: actions/checkout@v1
+      - run: npm ci
+      - name: PATH before
+        run: env | grep PATH
+        shell: bash
+      - run: npm run test
+        env:
+          TEST_INSTALLERS: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: PATH after
+        run: env | grep PATH
+        shell: bash
