--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@actions/github": "^2.1.1",
         "@actions/io": "^1.0.2",
         "@actions/tool-cache": "^1.3.3",
+        "@octokit/action": "^2.0.0",
         "@octokit/graphql": "^4.3.1",
         "@octokit/rest": "^17.1.0",
         "npm-check-updates": "^4.0.4",
