--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,6 @@
         "pretty": true,
         "removeComments": true,
         "resolveJsonModule": true,
-        "rootDir": "src",
         "strict": true,
         "suppressImplicitAnyIndexErrors": false,
         "target": "es2018",
@@ -27,6 +26,6 @@
         "sourceMap": true
     },
     "include": [
-        "src"
+        "src/**/*.ts"
     ]
 }
