--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "jest": "^25.1.0",
         "jest-circus": "^25.1.0",
         "prettier": "^1.19.1",
-        "ts-node": "^8.7.0",
+        "ts-jest": "^25.2.1",
         "typescript": "^3.8.3"
     }
 }
