--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "url": "https://github.com/actions-rs/core/issues"
     },
     "dependencies": {
+        "@actions/cache": "^0.2.1",
         "@actions/core": "^1.2.4",
         "@actions/exec": "^1.0.4",
         "@actions/github": "^2.2.0",
